# simple-compression

./: .gitingore  LICENSE  README.md  pyproject.toml
benchmarks/: benchmark.py  caterbury.py
documentation/: huffman_format.md  lz77_format.md  rle_format.md
simple_compression/: __init__.py  compression.py  probe.py
simple_compression/algorithms/: __init__.py  huffman.py  lz77.py  rle.py
tests/: test_auto_pipeline.py  test_huffman.py  test_lz77.py  test_manual_pipeline.py  test_rle.py
